--- a/1.01/10_2/lab/environment.yml
+++ b/1.01/10_2/lab/environment.yml
@@ -19,6 +19,7 @@ dependencies:
   - tensorflow
   - keras
   - pytorch
+  - u8darts-all
   - torchvision
   - torchaudio
   - xgboost
@@ -34,3 +35,4 @@ dependencies:
   - pip:
     - opencv-python
     - imbalanced-learn
+    - streamlit
